Intentando resolver la conexion con handlebars

--- a/views/registro.handlebars
+++ b/views/registro.handlebars
@@ -11,7 +11,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="/css/estilos.css" />
   </head>
   <body>
     <h1>Skate Park</h1>
@@ -52,7 +52,7 @@
           </div>
         </div>
         <button class="btn btn-info mb-3">Registrarme</button>
-        <p><a href="#"> Iniciar sesión</a></p>
+        <p><a href="/login"> Iniciar sesión</a></p>
       </form>
     </div>
   </body>
