--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="/css/estilos.css" />
   </head>
   <body>
     <h1>Skate Park</h1>
@@ -59,8 +59,8 @@
           </tr>
         </tbody>
       </table>
-      <a href="#">Iniciar Sesión</a> |
-      <a href="#">Registrarme</a>
+      <a href="/login">Iniciar Sesión</a> |
+      <a href="/registro">Registrarme</a>
     </div>
   </body>
 </html>
