Todavia intentando agregar el fileUpload

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,7 +20,7 @@
       <h2>Iniciar Sesión</h2>
       <hr class="w-50" />
 
-      <form>
+      <form action="login" method="POST">
         <div class="form-group">
           <div class="form-group">
             <label>Email</label>
