--- a/views/registro.handlebars
+++ b/views/registro.handlebars
@@ -18,38 +18,38 @@
     <h2>Registro</h2>
     <hr class="w-50" />
 
-    <form>
+    <form action="registro" method="POST">
       <div class="form-group row w-50 m-auto">
         <div class="form-group col-12 col-sm-6">
           <label>Email</label>
-          <input class="form-control m-auto" />
+          <input name="email" class="form-control m-auto" />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Nombre</label>
-          <input class="form-control m-auto" />
+          <input name="name" class="form-control m-auto" />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Password</label>
-          <input class="form-control m-auto" />
+          <input name="password" class="form-control m-auto" />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Repita la password</label>
-          <input class="form-control m-auto" />
+          <input name="passwordVerification" class="form-control m-auto" />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Años de experiencia</label>
-          <input class="form-control m-auto" />
+          <input name="experienceYears" class="form-control m-auto" />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Especialidad</label>
-          <input class="form-control m-auto" />
+          <input name="specialization" class="form-control m-auto" />
         </div>
         <div class="form-group col-12 col-sm-12">
           <label>Foto de perfil</label>
-          <input type="file" />
+          <input type="file" name="target_file"/>
         </div>
       </div>
-      <button class="btn btn-info mb-3">Registrarme</button>
+      <button type="submit" class="btn btn-info mb-3">Registrarme</button>
       <p><a href="/login"> Iniciar sesión</a></p>
     </form>
   </div>
