--- a/views/registro.handlebars
+++ b/views/registro.handlebars
@@ -18,7 +18,7 @@
     <h2>Registro</h2>
     <hr class="w-50" />
 
-    <form action="registro" method="POST">
+    <form action="/registro" method="POST" enctype="multipart/form-data">
       <div class="form-group row w-50 m-auto">
         <div class="form-group col-12 col-sm-6">
           <label>Email</label>
@@ -46,7 +46,7 @@
         </div>
         <div class="form-group col-12 col-sm-12">
           <label>Foto de perfil</label>
-          <input type="file" name="target_file"/>
+          <input type="file" name="foto"/>
         </div>
       </div>
       <button type="submit" class="btn btn-info mb-3">Registrarme</button>
