Logueo casi completado? Verificar, el JWT si se marca

--- a/views/partials/GetUsuarios.handlebars
+++ b/views/partials/GetUsuarios.handlebars
@@ -1,7 +1,7 @@
 <tr>
     <th scope="row">{{skaters.id}}</th>
     <td>
-        <div>{{skaters.foto}}</div>
+        <div><img src="{{skaters.foto}}" width="50" height="50"></div>
     </td>
     <td>{{skaters.nombre}}</td>
     <td>{{skaters.anos_experiencia}}</td>
